--- a/bob.html
+++ b/bob.html
@@ -7,7 +7,14 @@
     <body>
         <h1>The Blobfish</h1>
         <p>The following image is a picture of a Blobfish, the world's ugliest animal: </p>
-        <img src="blobFish.jpg" id="uglyBoy" onClick="makeInvisible();">
+        <img src="blobFish.jpg" id="uglyBoy" onClick="makeInvisible();"><br />
+        <p>Click on the image or on the button below to make the ulgy image disappear.</p><br />
+
+        <!--Buton para que la imagen se desaparezca-->
+        <input type="button" id="disappearButton" value="Disappear" onClick="makeInvisible();"> 
+
+        <!--Buton para que la imagen aparezca de nuevo-->
+        <input type="button" id="reappearButton" value="Bring It Back" onClick="reappear();">
 
     <script src="theFuncs.js"></script>
     </body>
