--- a/bob.html
+++ b/bob.html
@@ -6,7 +6,7 @@
 
     <body>
         <h1>The Blobfish</h1>
-        <p>The following image is a picture of a Blobfish, the world's ugliest animal: </p>
+        <p class="schoolSpecial" >The following image is a picture of a Blobfish, the world's ugliest animal: </p>
         <img src="blobFish.jpg" id="uglyBoy" onClick="makeInvisible();"><br />
         <p>Click on the image or on the button below to make the ulgy image disappear.</p><br />
 
