--- a/bob.html
+++ b/bob.html
@@ -19,9 +19,9 @@
         <input type="button" id="reappearButton" value="Bring It Back" onClick="reappear();"> <br /><br />
 
         <p>By the way, don't forget to check out our latest protein shake that turned this blob
-            into a whole <bold>NEW</bold> blobfish!
+            into a whole <b>NEW</b> blobfish!
         </p>
-        <p id="Blob">Before: <br />
+        <p id="Blob"><b>Before:</b><br />
         
             <img src="photos/lazyBlob.jpg" width="500" height="300" id="blobBefore"
             onMouseover="swapPic('blobBefore', 'photos/built.jpg');"
