--- a/bob.html
+++ b/bob.html
@@ -5,6 +5,7 @@
     </head>
 
     <body>
+        <div class="content-wrapper">
         <h1>The Blobfish</h1>
         <p class="schoolSpecial" >The following image is a picture of a Blobfish, the world's ugliest animal: </p>
 
@@ -29,7 +30,7 @@
         
         </p>
 
-     
+        </div>
 
 
 
